--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -6,8 +6,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
           rel="stylesheet">
     <style>
-        .b{
+        .error-border{
             border:solid 1px black;
+        }
+        .error-text{
+            color:red;
         }
     </style>
 </head>
@@ -18,27 +21,44 @@
         <div class="row align-items-center justify-content-center h-100 w-100">
             <div class="col-6 border border-3 rounded-5 align-items-center">
 
-                <form name="signupForm" id="signupForm" class="px-3 py-4" th:action method="post">
+                <form name="signupForm" id="signupForm" class="px-3 py-4"
+                      th:action th:object="${memberSignupForm}" method="post">
                     <h2>회원 가입</h2>
                     <div class="mb-3">
                         <label for="userId" class="form-label">ID</label>
                         <input type="text" class="form-control" id="userId" name="userId"
+                               th:field="*{userId}"
                                placeholder="영문/숫자 20자">
+                        <div th:errors="*{userId}" th:errorclass="|error-text|">
+                            userId 오류
+                        </div>
                     </div>
                     <div class="mb-3">
-                        <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" name="password"
+                        <label for="userPassword" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="userPassword" name="userPassword"
+                               th:field="*{userPassword}"
                                placeholder="최소 6자 최대 30자">
                         <div id="passwordHelp" class="form-text">자주 사용하는 비밀번호를 쓰지 마세요!</div>
+                        <div th:errors="*{userPassword}">
+                            userPassword 오류
+                        </div>
                     </div>
                     <div class="mb-3">
                         <label for="name" class="form-label">이름</label>
                         <input type="text" class="form-control" id="name" name="name"
+                               th:field="*{name}"
                                placeholder="한글 15자 영문 30자">
+                        <div th:errors="*{name}">
+                            name 오류
+                        </div>
                     </div>
                     <div class="mb-3">
                         <label for="age" class="form-label">나이</label>
-                        <input type="text" class="form-control" id="age" name="age">
+                        <input type="text" class="form-control" id="age" name="age"
+                               th:field="*{age}">
+                        <div th:errors="*{age}">
+                            age 오류
+                        </div>
                     </div>
                     <button type="submit" class="btn btn-secondary">회원 등록</button>
                 </form>
