--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -12,16 +12,20 @@
         .error-text{
             color:red;
         }
+        .fill-restspace{
+            flex: 1;
+        }
     </style>
 </head>
 <body>
+<div class="vh-100 vw-100">
     <nav th:replace="~{fragment/nav :: navbar}"></nav>
 
-    <div class="container align-items-center justify-content-center vw-100" style="padding-top: 15vh">
-        <div class="row align-items-center justify-content-center h-100 w-100">
-            <div class="col-6 border border-3 rounded-5 align-items-center">
+    <div class="container w-100 align-items-center justify-content-center fill-restspace p-5">
+        <div class="row h-100 w-100 align-items-center justify-content-center">
+            <div class="col-6 border border-3 rounded-5">
 
-                <form name="signupForm" id="signupForm" class="px-3 py-4"
+                <form name="signupForm" id="signupForm" class="p-3"
                       th:action th:object="${memberSignupForm}" method="post">
                     <h2>회원 가입</h2>
                     <div class="mb-3">
@@ -66,7 +70,7 @@
             </div>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
