--- a/src/main/resources/templates/loginHome.html
+++ b/src/main/resources/templates/loginHome.html
@@ -16,7 +16,12 @@
   <nav th:replace="~{fragment/nav :: navbar}"></nav>
 
   <h1> HOME </h1>
-  <h4 class="mb-3" text="익명의 사용자">로그인 사용자 이름</h4>
+  <h4 class="mb-3" text="익명의 사용자" th:text="|로그인id: ${member.userId} 이름:${member.name}(${member.age})|">로그인 사용자 이름</h4>
+  <button type="button" class="btn btn-secondary"
+          onclick="location.href='login.html'"
+          th:onclick="|location.href='@{/logout}'|">
+    Log Out
+  </button>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
