--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,6 +22,10 @@
             <div class="col-6 border border-3 rounded-5 align-items-center">
                 <form id="loginForm" name="loginForm" th:action th:object="${memberLoginForm}"
                       class="px-3 py-4">
+                    <div th:if="${#fields.hasGlobalErrors()}">
+                        <p class="error-text" th:each="err : ${#fields.globalErrors()}"
+                           th:text="${err}">전체 오류 메시지</p>
+                    </div>
                     <div class="mb-3">
                         <label for="userId" class="form-label">ID</label>
                         <input type="text" class="form-control"
