added board basic structure

--- a/src/main/resources/templates/fragment/nav.html
+++ b/src/main/resources/templates/fragment/nav.html
@@ -39,7 +39,7 @@
                             Boards
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Board 1</a></li>
+                            <li><a class="dropdown-item" href="/board/free">자유게시판</a></li>
                             <li><a class="dropdown-item" href="#">Board 2</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#">Else ...</a></li>
