--- a/src/main/resources/templates/board/free.html
+++ b/src/main/resources/templates/board/free.html
@@ -17,6 +17,15 @@
 
   <h1> 자유 게시판 </h1>
 
+  <form id="loginForm" name="loginForm"
+        th:action
+        class="px-3 py-4">
+    <button type="submit" class="btn btn-primary"
+            formaction="/board/free/post" formmethod="post">
+      TEST btn
+    </button>
+  </form>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
