--- a/src/main/resources/templates/board/freeList.html
+++ b/src/main/resources/templates/board/freeList.html
@@ -17,22 +17,10 @@
 
   <h1> 자유 게시판 </h1>
 
-  <form id="loginForm" name="loginForm"
-        th:action
-        class="px-3 py-4">
-    <button type="submit" class="btn btn-primary"
-            formaction="/board/free/post" formmethod="post">
-      TEST btn
-    </button>
-  </form>
-  <form id="postListTest" name="postListTest"
-        th:action
-        class="px-3 py-4">
-    <button type="submit" class="btn btn-primary"
-            formaction="/board/free/list" formmethod="get">
-      TEST postListBtn
-    </button>
-  </form>
+  <div th:each="post : ${postList}">
+    <p th:text="${post.id}"> </p>
+    <p th:text="${post.title}"> </p>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
