--- a/src/main/resources/templates/board/freeList.html
+++ b/src/main/resources/templates/board/freeList.html
@@ -17,10 +17,31 @@
 
   <h1> 자유 게시판 </h1>
 
-  <div th:each="post : ${postList}">
-    <p th:text="${post.id}"> </p>
-    <p th:text="${post.title}"> </p>
-  </div>
+<!--  <div th:each="post : ${postList}">-->
+<!--    <p th:text="${post.id}"> </p>-->
+<!--    <p th:text="${post.title}"> </p>-->
+<!--    <p th:text="${post.writer}"> </p>-->
+<!--    <p th:text="${post.date}"> </p>-->
+<!--  </div>-->
+
+  <table class="table">
+    <thead>
+    <tr>
+      <th>글 번호</th>
+      <th>제목</th>
+      <th>작성자</th>
+      <th>작성일</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="post : ${postList}">
+      <td th:text="${post.id}"> </td>
+      <td th:text="${post.title}"> </td>
+      <td th:text="${post.writer}"> </td>
+      <td th:text="${post.date}"> </td>
+    </tr>
+    </tbody>
+  </table>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
