--- a/src/main/resources/templates/board/free.html
+++ b/src/main/resources/templates/board/free.html
@@ -6,33 +6,21 @@
   <title>MyFirstBoard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
         rel="stylesheet">
-  <style>
-    .b{
-      border:solid 1px black;
-    }
-  </style>
 </head>
 <body>
   <nav th:replace="~{fragment/nav :: navbar}"></nav>
 
   <h1> 자유 게시판 </h1>
-
-  <form id="loginForm" name="loginForm"
-        th:action
-        class="px-3 py-4">
-    <button type="submit" class="btn btn-primary"
-            formaction="/board/free/post" formmethod="post">
-      TEST btn
-    </button>
-  </form>
-  <form id="postListTest" name="postListTest"
-        th:action
-        class="px-3 py-4">
-    <button type="submit" class="btn btn-primary"
-            formaction="/board/free/list" formmethod="get">
+    <button type="button" class="btn btn-primary"
+            onclick="location.href='freeList.html'"
+            th:onclick="|location.href='@{/board/free/list}'|">
       TEST postListBtn
     </button>
-  </form>
+    <button type="button" class="btn btn-primary"
+            onclick="location.href='postWrite.html'"
+            th:onclick="|location.href='@{/board/free/postWrite}'|">
+      TEST postWrite
+    </button>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
