--- a/src/main/resources/templates/board/boardPost.html
+++ b/src/main/resources/templates/board/boardPost.html
@@ -12,11 +12,32 @@
 
   <h1> 자유 게시판 </h1>
 
-  <h1 th:text="${post.title}"> 제목 </h1>
+  <table class="table">
+    <tr>
+      <td>
+        <h1 th:text="'제목 : '"></h1>
+      </td>
+      <td>
+        <h1 th:text="${post.title}"> 글 제목 </h1>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <h3 th:text="'작성자 : '"></h3>
+      </td>
+      <td>
+        <h3 th:text="${post.writer}"> 글 작성자</h3>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <p th:text="${post.content}">
+          게시글 내용
+        </p>
+      </td>
+    </tr>
+  </table>
 
-  <p th:text="${post.content}">
-    게시글 내용
-  </p>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
