added post update view and controller (NEED TO imple update method in BoardRepository)

--- a/src/main/resources/templates/board/boardPost.html
+++ b/src/main/resources/templates/board/boardPost.html
@@ -38,6 +38,12 @@
     </tr>
   </table>
 
+  <button type="button" class="btn btn-primary"
+          onclick="location.href='freeList.html'"
+          th:onclick="|location.href='@{/board/free/postWrite/{id}(id=${post.id})}'|">
+    글 수정
+  </button>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
