--- a/src/main/resources/templates/board/postUpdate.html
+++ b/src/main/resources/templates/board/postUpdate.html
@@ -14,6 +14,7 @@
 
     <form name="postWriteForm" id="postWriteForm" th:object="${post}"
           th:action th:method="put">
+        <input type="hidden" th:field="*{id}">
         <table th:class="table">
             <tr>
                 <td th:text="'글 제목'"></td>
