added delete post

--- a/src/main/resources/templates/board/boardPost.html
+++ b/src/main/resources/templates/board/boardPost.html
@@ -39,10 +39,17 @@
   </table>
 
   <button type="button" class="btn btn-primary"
-          onclick="location.href='freeList.html'"
           th:onclick="|location.href='@{/board/free/postWrite/{id}(id=${post.id})}'|">
     글 수정
   </button>
+
+  <form th:field="'postDelete'" th:object="${post}">
+    <input type="hidden" th:field="*{id}">
+    <button class="btn btn-primary" formmethod="post"
+            formaction="/board/free/postDelete" type="submit">
+      글 삭제
+    </button>
+  </form>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
