--- a/src/main/resources/templates/board/boardPost.html
+++ b/src/main/resources/templates/board/boardPost.html
@@ -39,7 +39,7 @@
   </table>
 
   <button type="button" class="btn btn-primary"
-          th:onclick="|location.href='@{/board/free/postWrite/{id}(id=${post.id})}'|">
+          th:onclick="|location.href='@{/board/free/write/{id}(id=${post.id})}'|">
     글 수정
   </button>
 
