--- a/src/main/resources/templates/board/freeList.html
+++ b/src/main/resources/templates/board/freeList.html
@@ -17,12 +17,11 @@
 
   <h1> 자유 게시판 </h1>
 
-<!--  <div th:each="post : ${postList}">-->
-<!--    <p th:text="${post.id}"> </p>-->
-<!--    <p th:text="${post.title}"> </p>-->
-<!--    <p th:text="${post.writer}"> </p>-->
-<!--    <p th:text="${post.date}"> </p>-->
-<!--  </div>-->
+  <button type="button" class="btn btn-primary"
+          onclick="location.href='postWrite.html'"
+          th:onclick="|location.href='@{/board/free/write}'|">
+    TEST write
+  </button>
 
   <table class="table">
     <thead>
@@ -42,6 +41,7 @@
     </tr>
     </tbody>
   </table>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
