added basic post hit

--- a/src/main/resources/templates/board/boardPost.html
+++ b/src/main/resources/templates/board/boardPost.html
@@ -28,6 +28,12 @@
       <td>
         <h3 th:text="${post.writer}"> 글 작성자</h3>
       </td>
+      <td>
+        <h4 th:text="'조회수 : '"></h4>
+      </td>
+      <td>
+        <h4 th:text="${post.hit}"> </h4>
+      </td>
     </tr>
     <tr>
       <td>
