Change post delete method from 'POST' to 'DELETE'

--- a/src/main/resources/templates/board/postList.html
+++ b/src/main/resources/templates/board/postList.html
@@ -44,16 +44,7 @@
     </tbody>
   </table>
 
-  <!--여기는 페이징 처리 부분 -->
-  <!-- 부트스트랩 참고 https://getbootstrap.com/docs/4.0/components/pagination/ -->
-  <!--1. 앞부분 5페이지-->
-  <!--2. 뒷부분 5페이지-->
-  <!--3. 마지막  페이지-->
-
-  <p>
-    <div th:text="|nowPage : ${pagination.nowPage}|" />
-  </p>
-
+<!-- 페이징 처리 -->
   <nav aria-label="Page navigation example">
     <div>
     <ul class="pagination justify-content-center">
