--- a/src/main/resources/templates/board/postWrite.html
+++ b/src/main/resources/templates/board/postWrite.html
@@ -16,50 +16,50 @@
 <nav th:replace="~{fragment/nav :: navbar}"></nav>
 
 <h1> 자유 게시판 </h1>
+<div class="container">
+    <form name="postWriteForm" id="postWriteForm"
+          th:action th:object="${postWrite}" method="post">
 
-<form name="postWriteForm" id="postWriteForm"
-      th:action th:object="${postWrite}" method="post">
+        <table th:class="table">
+            <tr class="row">
+                <td th:text="'글 제목'" class="col col-auto"></td>
+                <td class="col">
+                    <input id="title" name="title" type="text" class="form-control"
+                            placeholder="제목을 입력하세요" th:field="*{title}">
+                    <div th:errors="*{title}" th:errorclass="|error-text|">
+                        title 오류
+                    </div>
+                </td>
+            </tr>
+            <tr class="row">
+                <td th:text="'작성자'" class="col col-auto"></td>
+                <td class="col">
+                    <input id="writer" name="writer" type="text" class="form-control"
+                            placeholder="작성자" th:field="*{writer}">
+                    <div th:errors="*{writer}" th:errorclass="|error-text|">
+                        wrtier 오류
+                    </div>
+                </td>
+            </tr>
+            <tr class="row">
+                <td class="col">
+                    <div th:errors="*{content}" th:errorclass="|error-text|">
+                        content 오류
+                    </div>
+                    <textarea id="content" name="content" class="form-control mh-100"
+                              placeholder="글 내용을 입력하세요" th:field="*{content}"
+                              style="height: 300px"> </textarea>
+                </td>
+            </tr>
+        </table>
 
-    <!--        <div th:if="${#fields.hasGlobalErrors()}">-->
-    <!--            <p class="error-text" th:each="err : ${#fields.globalErrors()}"-->
-    <!--               th:text="${err}">전체 오류 메시지</p>-->
-    <!--        </div>-->
+        <button type="submit" class="btn btn-primary"
+                formaction="/board/write" formmethod="post">
+            글 등록
+        </button>
+    </form>
+</div>
 
-    <table th:class="table">
-        <tr>
-            <td th:text="'글 제목'"></td>
-            <td> <input id="title" name="title" type="text"
-                        placeholder="제목을 입력하세요" th:field="*{title}">
-                <div th:errors="*{title}" th:errorclass="|error-text|">
-                    title 오류
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td th:text="'작성자'"></td>
-            <td> <input id="writer" name="writer" type="text"
-                        placeholder="작성자" th:field="*{writer}">
-                <div th:errors="*{writer}" th:errorclass="|error-text|">
-                    wrtier 오류
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <div th:errors="*{content}" th:errorclass="|error-text|">
-                    content 오류
-                </div>
-                <textarea id="content" name="content"
-                          placeholder="글 내용을 입력하세요" th:field="*{content}"> </textarea>
-            </td>
-        </tr>
-    </table>
-
-    <button type="submit" class="btn btn-primary"
-            formaction="/board/write" formmethod="post">
-        글 등록
-    </button>
-</form>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
