--- a/src/main/resources/templates/board/postList.html
+++ b/src/main/resources/templates/board/postList.html
@@ -6,70 +6,74 @@
   <title>MyFirstBoard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
         rel="stylesheet">
-  <style>
-    .b{
-      border:solid 1px black;
-    }
-  </style>
 </head>
+
 <body>
   <nav th:replace="~{fragment/nav :: navbar}"></nav>
 
-  <h1> 자유 게시판 </h1>
+  <div class="container">
+    <h1 style="margin: 20px 0"> 자유 게시판 </h1>
 
-  <button type="button" class="btn btn-primary"
-          onclick="location.href='postWrite.html'"
-          th:onclick="|location.href='@{/board/free/write}'|">
-    TEST write
-  </button>
-
-  <table class="table">
-    <thead>
-    <tr>
-      <th>글 번호</th>
-      <th>제목</th>
-      <th>작성자</th>
-      <th>작성일</th>
-      <th>조회수</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="post : ${postList}">
-      <td th:text="${post.id}"> </td>
-      <td> <a th:text="${post.title}" th:href="|/board/free/${post.id}|"></a> </td>
-      <td th:text="${post.writer}"> </td>
-      <td th:text="${post.date}"> </td>
-      <td th:text="${post.hit}"> </td>
-    </tr>
-    </tbody>
-  </table>
-
-<!-- 페이징 처리 -->
-  <nav aria-label="Page navigation example">
-    <div>
-    <ul class="pagination justify-content-center">
-      <li class="page-item"
-          th:classappend="${pagination.nowPage == 1} ? 'disabled'">
-        <a class="page-link" th:href="@{free(page=${pagination.nowPage}-1)}" tabindex="-1">Previous</a>
-      </li>
-
-      <th:block th:each="page : ${prevPageList}">
-        <li class="page-item"><a class="page-link" th:href="@{free(page=${page})}" th:text="${page}">1</a></li>
-      </th:block>
-
-      <li class="page-item"><a class="page-link disabled" th:text="${pagination.nowPage}"></a></li>
-
-      <th:block th:each="page : ${nextPageList}">
-        <li class="page-item"><a class="page-link" th:href="@{free(page=${page})}" th:text="${page}">1</a></li>
-      </th:block>
-
-      <li class="page-item"
-          th:classappend="${#lists.size(nextPageList) == 0} ? 'disabled'">
-        <a class="page-link" th:href="@{free(page=${pagination.nowPage}+1)}">Next</a>
-      </li>
-    </ul>
+    <div class="d-flex flex-row-reverse mx-3 px-1">
+      <button type="button" class="btn btn-primary"
+              onclick="location.href='postWrite.html'"
+              th:onclick="|location.href='@{/board/free/write}'|"
+      >
+        글쓰기
+      </button>
     </div>
-  </nav>
+
+
+    <table class="table">
+      <thead>
+      <tr>
+        <th>글 번호</th>
+        <th>제목</th>
+        <th>작성자</th>
+        <th>작성일</th>
+        <th>조회수</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="post : ${postList}">
+        <td th:text="${post.id}"> </td>
+        <td> <a th:text="${post.title}" th:href="|/board/free/${post.id}|"></a> </td>
+        <td th:text="${post.writer}"> </td>
+        <td th:text="${post.date}"> </td>
+        <td th:text="${post.hit}"> </td>
+      </tr>
+      </tbody>
+    </table>
+
+    <!-- 페이징 처리 -->
+    <nav aria-label="Page navigation example">
+      <div>
+        <ul class="pagination justify-content-center">
+          <li class="page-item"
+              th:classappend="${pagination.nowPage == 1} ? 'disabled'">
+            <a class="page-link" th:href="@{free(page=${pagination.nowPage}-1)}" tabindex="-1">Previous</a>
+          </li>
+
+          <th:block th:each="page : ${prevPageList}">
+            <li class="page-item"><a class="page-link" th:href="@{free(page=${page})}" th:text="${page}">1</a></li>
+          </th:block>
+
+          <li class="page-item"><a class="page-link disabled" th:text="${pagination.nowPage}"></a></li>
+
+          <th:block th:each="page : ${nextPageList}">
+            <li class="page-item"><a class="page-link" th:href="@{free(page=${page})}" th:text="${page}">1</a></li>
+          </th:block>
+
+          <li class="page-item"
+              th:classappend="${#lists.size(nextPageList) == 0} ? 'disabled'">
+            <a class="page-link" th:href="@{free(page=${pagination.nowPage}+1)}">Next</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
