--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,17 +6,15 @@
   <title>MyFirstBoard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
         rel="stylesheet">
-  <style>
-    .b{
-      border:solid 1px black;
-    }
-  </style>
 </head>
 <body>
   <nav th:replace="~{fragment/nav :: navbar}"></nav>
 
-  <h1> HOME </h1>
-  <h4 class="mb-3" text="익명의 사용자">로그인 사용자 이름</h4>
+  <div class="container">
+    <h1 class="my-5"> HOME </h1>
+    <p class="mb-3" text="익명의 사용자">로그인 사용자 이름</p>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
