--- a/src/main/resources/templates/board/postRead.html
+++ b/src/main/resources/templates/board/postRead.html
@@ -6,58 +6,67 @@
   <title>MyFirstBoard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
         rel="stylesheet">
+  <link href="/css/post.css" th:href="@{/css/post.css}" type="text/css" rel="stylesheet"/>
 </head>
 <body>
   <nav th:replace="~{fragment/nav :: navbar}"></nav>
 
-  <h1> 자유 게시판 </h1>
+  <div class="container">
 
-  <table class="table">
-    <tr>
-      <td>
-        <h1 th:text="'제목 : '"></h1>
-      </td>
-      <td>
-        <h1 th:text="${post.title}"> 글 제목 </h1>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <h3 th:text="'작성자 : '"></h3>
-      </td>
-      <td>
-        <h3 th:text="${post.writer}"> 글 작성자</h3>
-      </td>
-      <td>
-        <h4 th:text="'조회수 : '"></h4>
-      </td>
-      <td>
-        <h4 th:text="${post.hit}"> </h4>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <p th:text="${post.content}">
-          게시글 내용
-        </p>
-      </td>
-    </tr>
-  </table>
+    <h1 style="margin: 20px 0"> 자유 게시판 </h1>
 
-  <button type="button" class="btn btn-primary"
-          th:onclick="|location.href='@{/board/free/write/{id}(id=${post.id})}'|">
-    글 수정
-  </button>
+    <table class="table">
 
-  <form th:field="'postDelete'"
-        th:action="|@{/board/free}|"
-        th:method="delete"
-        th:object="${post}">
-    <input type="hidden" th:field="*{id}">
-    <button class="btn btn-primary" type="submit">
-      글 삭제
-    </button>
-  </form>
+      <tr class="table table-primary">
+        <td colspan="3">
+          <p class="post-title"
+             th:text="${post.title}"> 제목 </p>
+        </td>
+      </tr>
+
+      <tr class="table-secondary">
+        <td class="post-table-writer post-writer">
+          <h3 th:text="${post.writer}"> 글쓴이 </h3>
+        </td>
+        <td>
+          <h4 th:text="'조회수 : '"></h4>
+        </td>
+        <td>
+          <h4 th:text="${post.hit}"> </h4>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="3">
+          <p th:text="${post.content}" class="post-content">
+            게시글 내용
+          </p>
+        </td>
+      </tr>
+    </table>
+
+    <table>
+      <tr>
+        <td>
+          <button type="button" class="btn btn-primary"
+                  th:onclick="|location.href='@{/board/free/write/{id}(id=${post.id})}'|">
+            글 수정
+          </button>
+        </td>
+        <td>
+          <form th:field="'postDelete'"
+                th:action="|@{/board/free}|"
+                th:method="delete"
+                th:object="${post}">
+            <input type="hidden" th:field="*{id}">
+            <button class="btn btn-primary" type="submit">
+              글 삭제
+            </button>
+          </form>
+        </td>
+      </tr>
+    </table>
+
+  </div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
