--- a/src/main/resources/templates/board/postUpdate.html
+++ b/src/main/resources/templates/board/postUpdate.html
@@ -13,7 +13,7 @@
     <h1> 자유 게시판 </h1>
 
     <form name="postWriteForm" id="postWriteForm" th:object="${post}"
-          th:action th:method="put">
+          th:action th:method="post">
         <input type="hidden" th:field="*{id}">
         <table th:class="table">
             <tr>
@@ -39,7 +39,7 @@
 
         <button type="submit" class="btn btn-primary"
                 formaction="/board/update/" formmethod="post">
-            글 등록
+            글 수정
         </button>
     </form>
 
