--- a/src/main/resources/templates/board/postRead.html
+++ b/src/main/resources/templates/board/postRead.html
@@ -6,7 +6,8 @@
   <title>MyFirstBoard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
         rel="stylesheet">
-  <link href="/css/post.css" th:href="@{/css/post.css}" type="text/css" rel="stylesheet"/>
+  <link href="/css/post.css" th:href="@{/css/post.css}"
+        type="text/css" rel="stylesheet"/>
 </head>
 <body>
   <nav th:replace="~{fragment/nav :: navbar}"></nav>
