--- a/src/main/resources/templates/board/postUpdate.html
+++ b/src/main/resources/templates/board/postUpdate.html
@@ -6,42 +6,69 @@
     <title>MyFirstBoard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
           rel="stylesheet">
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/css/post.css}">
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/css/post-update.css}">
 </head>
 <body>
-<nav th:replace="~{fragment/nav :: navbar}"></nav>
+    <nav th:replace="~{fragment/nav :: navbar}"></nav>
 
-    <h1> 자유 게시판 </h1>
+    <div class="container">
+        <h1 style="margin: 20px 0"> 자유 게시판 </h1>
 
-    <form name="postWriteForm" id="postWriteForm" th:object="${post}"
-          th:action th:method="post">
-        <input type="hidden" th:field="*{id}">
-        <table th:class="table">
-            <tr>
-                <td th:text="'글 제목'"></td>
-                <td> <input id="title" name="title"
-                            th:field="*{title}" type="text"
-                            placeholder="제목을 입력하세요"></td>
-            </tr>
-            <tr>
-            <td th:text="'작성자'"></td>
-            <td> <input id="writer" name="writer"
-                        th:field="*{writer}" type="text"
-                        placeholder="작성자"></td>
-            </tr>
-            <tr>
-                <td>
-                    <textarea id="content" name="content"
-                              th:field="*{content}"
-                              placeholder="글 내용을 입력하세요"> </textarea>
-                </td>
-            </tr>
-        </table>
+        <form name="postWriteForm" id="postWriteForm"
+              th:object="${post}"
+              th:action th:method="post">
 
-        <button type="submit" class="btn btn-primary"
-                formaction="/board/update/" formmethod="post">
-            글 수정
-        </button>
-    </form>
+            <input type="hidden" th:field="*{id}">
+
+            <table th:class="table">
+                <tr class="table">
+                    <td class="postUpdate-td-category"
+                            th:text="'글 제목'"></td>
+                    <td>
+                        <div class="input-group">
+                            <input id="title" name="title"
+                                   th:field="*{title}" type="text"
+                                   class="form-control py-1 px-2 postUpdate-input"
+                                   placeholder="제목을 입력하세요">
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="postUpdate-td-category"
+                        th:text="'작성자'"></td>
+                    <td>
+                        <div class="input-group">
+                            <input id="writer" name="writer"
+                                   th:field="*{writer}" type="text"
+                                   class="form-control py-1 px-2 postUpdate-input"
+                                   placeholder="작성자">
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <div class="input-group">
+                            <textarea id="content" name="content"
+                                  th:field="*{content}"
+                                  class="form-control" rows="12"
+                                  placeholder="글 내용을 입력하세요">
+                            </textarea>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+
+            <button type="submit" class="btn btn-primary"
+                    formaction="/board/update/" formmethod="post">
+                글 수정
+            </button>
+        </form>
+    </div>
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
