--- a/src/main/resources/static/css/post-list.css
+++ b/src/main/resources/static/css/post-list.css
@@ -31,3 +31,14 @@
 .postlist-hit-td {
     width:5%;
 }
+
+.search-group {
+    min-width: 500px;
+    width: 100%;
+
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.select-size {
+}
