--- a/src/main/resources/templates/board/postList.html
+++ b/src/main/resources/templates/board/postList.html
@@ -52,28 +52,31 @@
 
     </div>
     <div class="d-flex justify-content-center w-100 my-2" style="width: 500px; height: 40px">
-      <form class="d-flex justify-content-center">
-          <select class="form-select mx-1"
-                  style="width: 100px;"
-                  id="inputGroupSelect01">
-            <option selected>제목</option>
-            <option value="1">내용</option>
-            <option value="2">제목+내용</option>
-            <option value="3">작성자</option>
+      <form name="searchForm" id="searchForm"
+            th:action="@{'/board/free/search'}" method="get"
+            class="d-flex justify-content-center">
+
+          <select name="searchType" id="searchType"
+                  class="form-select mx-1"
+                  style="width: 100px;">
+            <option value="title">제목</option>
+            <option value="content">내용</option>
+            <option value="titleOrContent">제목+내용</option>
+            <option value="writer">작성자</option>
           </select>
 
-          <input type="text" class="form-control"
+          <input name="searchKeyword" id="searchKeyword"
+                  type="text" class="form-control"
                  placeholder=""
                  aria-label="Example text with button addon"
                  aria-describedby="button-addon1">
 
           <div class="mx-1">
             <button class="btn btn-outline-secondary p-0"
-                    type="button"
+                    type="submit"
                     style="height: 100%; width: 50px;"
                     id="button-addon1">검색</button>
           </div>
-
       </form>
     </div>
 
