--- a/src/main/resources/templates/board/postList.html
+++ b/src/main/resources/templates/board/postList.html
@@ -59,10 +59,10 @@
           <select name="searchType" id="searchType"
                   class="form-select mx-1"
                   style="width: 100px;">
-            <option value="title">제목</option>
-            <option value="content">내용</option>
-            <option value="titleOrContent">제목+내용</option>
-            <option value="writer">작성자</option>
+            <option value="TITLE">제목</option>
+            <option value="CONTENT">내용</option>
+            <option value="TITLEORCONTENT">제목+내용</option>
+            <option value="WRITER">작성자</option>
           </select>
 
           <input name="searchKeyword" id="searchKeyword"
